# django-tinyforum

./: .travis.yml  CHANGELOG.rst  MANIFEST.in  README.rst  admin.py  forms.py  models.py  setup.cfg  setup.py  signals.py  tox.ini  utils.py  views.py
templates/tinyforum/: base.html  pagination.html  post_form.html  post_list.html  postreport_list.html  report_form.html  thread_form.html  thread_list.html  thread_star.html
templatetags/: tinyforum.py
tests/testapp/: forum_urls.py  settings.py  test_forum.py  urls.py
tests/testapp/templates/: base.html
tinyforum/: admin.py  forms.py  models.py  utils.py  views.py
tinyforum/locale/de/LC_MESSAGES/: django.mo  django.po
tinyforum/locale/fr/LC_MESSAGES/: django.mo  django.po
tinyforum/migrations/: 0001_initial.py
tinyforum/templates/tinyforum/: pagination.html  post_form.html  post_list.html  postreport_list.html  report_form.html  thread_form.html  thread_list.html  thread_star.html
tinyforum/templatetags/: tinyforum.py
