[metadata]
name = django_tinyforum
version = attr: tinyforum.__version__
description = Tiny forum for Django
long_description = file: README.rst
long_description_content_type = text/x-rst
url = http://github.com/matthiask/django-tinyforum/
author = Matthias Kestenholz
author_email = mk@feinheit.ch
license = MIT
license_file = LICENSE
platforms = OS Independent
classifiers =
    Environment :: Web Environment
    Framework :: Django
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3

[options]
packages = find:
install_requires =
    django-ckeditor
    django-fineforms
    html-sanitizer
include_package_data = True
zip_safe = False

[options.packages.find]
exclude =
    tests
    testapp

[flake8]
exclude = venv,build,docs,.tox,migrations
max-complexity = 10
max-line-length = 88

[coverage:run]
branch = True
include =
    *tinyforum*
omit =
    *migrations*
    *tests*
    *.tox*
